# Bachelor-Thesis

./: .gitignore  README.md  pyproject.toml
article/: bibliography.bib  frontespizio.tex  main.tex
article/chapters/blockchain/: bitcoin.tex  classification.tex  index.tex  introduction.tex
article/chapters/conclusion/: index.tex
article/chapters/federated-learning/: gradient-descent.tex  index.tex  supervised-learning.tex  vanilla-fl.tex
article/chapters/integration/: blockchain-fl.tex  evaluation.tex  implementation.tex  index.tex
article/chapters/preliminaries/: cap1.tex  index.tex  objectives.tex  old_introduction.tex
src/experiment/: __main__.py  config.py  metrics.py  model.py  plot.py  utils.py
src/experiment/blockchain/: __main__.py  cli.py  models.py  serialization.py  training.py  validation.py
src/experiment/blockchain/peer/: __init__.py  __main__.py
src/experiment/vanilla/: __init__.py  __main__.py
src/experiment/vanilla/client/: __init__.py  __main__.py  serialization.py
src/experiment/vanilla/server/: __init__.py  __main__.py
